--- a/1_advanced/index.html
+++ b/1_advanced/index.html
@@ -10,10 +10,11 @@
 </head>
 <body>
     <div class="container">
-
-
+        <button class="btn" id="btn">Press me, please !!!</button>
+        <hr />
+        <div id="card"></div>
     </div>
 
-    <script src="./dist/generic.js" defer></script>
+    <script src="dist/namespaces.js" defer></script>
 </body>
 </html>
