--- a/1_advanced/index.html
+++ b/1_advanced/index.html
@@ -15,6 +15,6 @@
         <div id="card"></div>
     </div>
 
-    <script src="dist/namespaces.js" defer></script>
+    <script src="dist/decorators.js" defer></script>
 </body>
 </html>
